# projectchechkers

./: README.md  UML LAB in main project.md  all_4.js  all_7.js  all_8.js  all_9.js  all_e.js  all_f.js  board_8h_source.html  class_board_test.html  class_move_node-members.html  class_piece.html  class_player_test-members.html  dir_6fc728d995128083833063ce4c65ba27.html  globals.html  hierarchy.html  idk.md  lab2patterns.md  main.cpp  mainchechkers  projectand3lab.md  usingpatern.md
binomial heap/: CMakeLists.txt  binomial heap.cpp  heaprealization.cpp  heaprealization.h  node.cpp  node.h  testheap.cpp
binominaltree/: CMakeLists.txt  binomtree.cpp  dpstrategy.cpp  dpstrategy.h  testbinom.cpp  treetemplate.cpp  treetemplate.h
binominaltree/docs/html/: _xD0_xB4_xD1_x84_xD1_x84_xD0_xB4_xD0_xB4_xD1_x84_8rtf.html  annotated.html  binomial_01heap_8cpp.html  binomial_01heap_8cpp__incl.dot  class_binomial_heap-members.html  class_binomial_heap.html  class_binomial_heap__coll__graph.dot  class_binomial_heap_singleton-members.html  class_binomial_heap_singleton.html  class_binomial_heap_singleton__coll__graph.dot  class_node.html  class_node__coll__graph.dot  class_node_factory.html  dir_0ed116bb83a4c09ae1269b4927e004be.html  dir_0ed116bb83a4c09ae1269b4927e004be_dep.dot  dir_4b9c879a27ea1f1c8cf498c19ff6e8ab.html  dir_5ad7f572bbca03234e8e621e192fc099.html  dir_8f560faf25dda47e99c70acb33521506.html  dir_8f560faf25dda47e99c70acb33521506_dep.dot  dir_ad2287be10ffbaedcb318a5bae37a26b.html  dir_ad2287be10ffbaedcb318a5bae37a26b_dep.dot  dir_c967adb4fcfd5f0f96ebb3aab41e687d.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  heaprealization_8cpp.html  heaprealization_8cpp__incl.dot  heaprealization_8h.html  heaprealization_8h__dep__incl.dot  heaprealization_8h__incl.dot  heaprealization_8h_source.html  idk_8md.html  index.html  node_8cpp.html  node_8cpp__incl.dot  (+4 more)
binominaltree/docs/rtf/: binomial_01heap_8cpp__incl.dot  class_binomial_heap__coll__graph.dot  class_binomial_heap_singleton__coll__graph.dot  class_node__coll__graph.dot  dir_0ed116bb83a4c09ae1269b4927e004be.rtf  dir_4b9c879a27ea1f1c8cf498c19ff6e8ab.rtf  dir_5ad7f572bbca03234e8e621e192fc099.rtf  dir_8f560faf25dda47e99c70acb33521506.rtf  dir_ad2287be10ffbaedcb318a5bae37a26b.rtf  dir_c967adb4fcfd5f0f96ebb3aab41e687d.rtf  heaprealization_8cpp__incl.dot  heaprealization_8h__dep__incl.dot  heaprealization_8h__incl.dot  node_8cpp__incl.dot  node_8h__dep__incl.dot  refman.rtf  (+1 more)
binominaltree/html/: binomtree_8cpp.html  class_binomial_heap-members.html  class_binomial_heap.html  class_binomial_heap_singleton-members.html  class_binomial_heap_singleton.html  class_node-members.html  class_node.html  class_node_factory-members.html  class_node_factory.html  class_o_b_s_tree-members.html  class_o_b_s_tree.html  classes.html  dir_0ed116bb83a4c09ae1269b4927e004be.html  dir_236cbadf0bebca08c2a7a170cff6fc2b.html  dir_5ad7f572bbca03234e8e621e192fc099.html  dir_8f560faf25dda47e99c70acb33521506.html  dir_ad2287be10ffbaedcb318a5bae37a26b.html  dir_c967adb4fcfd5f0f96ebb3aab41e687d.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  heaprealization_8h_source.html  index.html  node_8h_source.html
binominaltree/latex/: annotated.tex  binomtree_8cpp.tex  class_o_b_s_tree.tex  files.tex  refman.tex
binominaltree/rtf/: refman.rtf
lab2Strategy/: CMakeLists.txt  hashfunction.cpp  perfecthashing.cpp
lab2obstree/: CMakeLists.txt  RecursiveStrategy.h  TreeConstructionStrategy.h  main.cpp  obstree.cpp  obstree.h  tyiu.cpp
mainproject/: CMakeLists.txt  Doxyfile  board.cpp  board.h  drawobjects.cpp  gamefacade.h  gameloop.cpp  gameloop.h  gameobserver.h  logic.cpp  logic.h  main.cpp  menu.cpp  menu.h  move.cpp  move.h  movenode.cpp  movenode.h  observer.cpp  observer.h  paralel.h  piece.cpp  piece.h  piecestate.cpp  piecestate.h  player.cpp  player.h  testproject.cpp  tset.cpp
mainproject/UML/: Documentation  activity.puml  class.puml  component.puml  compositestructure.puml  deployment.puml  interaction ovw.puml  object.puml  package.puml  sequence.puml  usecase.puml
mainproject/html/: annotated.html  board_8cpp.html  board_8h.html  board_8h_source.html  class_board-members.html  class_board.html  class_board_test-members.html  class_board_test.html  class_game-members.html  class_game.html  class_game_facade-members.html  class_game_facade.html  class_game_observer-members.html  class_game_observer.html  class_king_state-members.html  class_king_state.html  class_menu-members.html  class_menu.html  class_move-members.html  class_move.html  class_move_node-members.html  class_move_node.html  class_move_node_test-members.html  class_move_node_test.html  class_observer-members.html  class_observer.html  class_piece-members.html  class_piece.html  class_piece_state-members.html  class_piece_state.html  class_player-members.html  class_player.html  class_player_test-members.html  class_player_test.html  class_regular_state-members.html  class_regular_state.html  class_subject-members.html  class_subject.html  classes.html  classlogic-members.html  (+49 more)
mainproject/latex/: annotated.tex  board_8cpp.tex  board_8h.tex  board_8h_source.tex  class_board.eps  class_board.tex  class_board_test.eps  class_board_test.tex  class_game.tex  class_game_facade.tex  class_game_observer.eps  class_game_observer.tex  class_king_state.eps  class_king_state.tex  class_menu.tex  class_move.tex  class_move_node.tex  class_move_node_test.eps  class_move_node_test.tex  class_observer.eps  class_observer.tex  class_piece.tex  class_piece_state.eps  class_piece_state.tex  class_player.tex  class_player_test.eps  class_player_test.tex  class_regular_state.eps  class_regular_state.tex  class_subject.eps  class_subject.tex  classlogic.tex  dir_4b9c879a27ea1f1c8cf498c19ff6e8ab.tex  drawobjects_8cpp.tex  files.tex  gamefacade_8h.tex  gamefacade_8h_source.tex  gameloop_8cpp.tex  gameloop_8h.tex  gameloop_8h_source.tex  (+32 more)
(+230 files in other folders)
